# Zenon

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
CMake/: CommonInc.cmake  GitSubmodules.cmake  ZenonEngineInc.cmake
Config/: RootDirectory.h.in
Content/Shaders/: default.frag  fragment.glsl  lighting.frag  lighting.vert  vertex.glsl
Engine/: CMakeLists.txt
Engine/Camera/: Camera.cpp  Camera.h  Camera.hpp
Engine/Core/: Application.cpp  Application.h  Application.hpp  Assert.h  Assert.hpp  Base.h  Base.hpp  Delegate.h  FileSystem.h  Log.cpp  Log.h  Log.hpp  Timer.h  Timer.hpp
Engine/Devices/: Window.cpp  Window.h
Engine/Events/: ApplicationEvent.h  ApplicationEvent.hpp  Event.h  Event.hpp  KeyEvent.h  KeyEvent.hpp
Engine/FileSystem/: FileSystem.cpp  FileSystem.h  FileSystem.hpp
Engine/Graphics/: Shader.cpp  Texture.cpp
Engine/Input/: InputSystem.cpp  InputSystem.h  InputSystem.hpp  KeyCodes.h  KeyCodes.hpp
Engine/Math/: Math.hpp
Engine/Platform/: Window.cpp  Window.h  Window.hpp
Engine/Renderer/: Renderer.cpp  Renderer.h  Renderer.hpp  Shader.cpp  Shader.h  Shader.hpp  Texture.cpp  Texture.h  Texture.hpp  VertexArray.cpp  VertexArray.h  VertexArray.hpp
Engine/Resource/: ResourceManager.cpp  ResourceManager.h  ResourceManager.hpp  ResourceRegistry.hpp
Engine/Utils/: Lifetime.h  Lifetime.hpp  MemoryViewer.h  MemoryViewer.hpp
Resources/Shaders/: vertex.glsl
Sandbox/: CMakeLists.txt  EntryPoint.cpp
Scripts/: zen.bat
ZenonEngine/: CMakeLists.txt
ZenonEngine/Core/: Application.cpp  Application.h  Assert.h  Base.h  Delegate.h  FileSystem.h  Log.cpp  Log.h  Signal.h
ZenonEngine/Devices/: Window.cpp  Window.h
ZenonEngine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h
ZenonEngine/Graphics/: Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
ZenonEngine/Utils/: MemoryViewer.h
